Update ws